# restauri

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src/: AddRequest.tsx  App.tsx  EditRequest.tsx  HttpMethod.tsx  RequestPanel.tsx  main.tsx  store.ts  styles.css
src-tauri/: Cargo.toml  db.sqlite  tauri.conf.json
src-tauri/bindings/: Request.ts  RequestHistory.ts
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: main.rs
src/RequestPanel/: RequestInput.tsx  RequestPanel.tsx
src/bindings/: bindings.ts  useRequest.tsx  useRequests.tsx
src/ui/: button.tsx  context-menu.tsx  dialog.tsx  input.tsx  select.tsx  tabs.tsx
